develop eximbay 과제 준비
- 카프카 설정 준비
- 몽고디비 준비

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,12 @@
 spring:
   data:
     mongodb:
+      uri: mongodb://127.0.0.1:27017
       host: localhost
       port: 27017
       database: eximbay
+      authentication-database: admin
+      username: root
+      password: root
+
+
